@@ -2,8 +2,8 @@ package uk.gov.hmcts.reform.iahomeofficeintegrationapi.domain.handlers.presubmit
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.junit.Assert.assertNull;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.mockito.Mockito.when;
 import static uk.gov.hmcts.reform.iahomeofficeintegrationapi.domain.entities.AsylumCaseDefinition.APPEAL_REFERENCE_NUMBER;
 import static uk.gov.hmcts.reform.iahomeofficeintegrationapi.domain.entities.AsylumCaseDefinition.APPEAL_SUBMISSION_DATE;
@@ -175,7 +175,7 @@ class NotificationsHelperTest extends AbstractNotificationsHandlerTestBase {
 
         final List<Person> applicants = challenge.getApplicants();
         assertThat(applicants).hasSize(1);
-        assertPerson(applicants.get(0));
+        assertPerson(applicants.getFirst());
     }
 
     @Test
