@@ -3,11 +3,11 @@ package uk.gov.hmcts.reform.iahomeofficeintegrationapi.domain.handlers.presubmit
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.reset;
@@ -61,7 +61,6 @@ import uk.gov.hmcts.reform.iahomeofficeintegrationapi.domain.entities.ccd.Event;
 import uk.gov.hmcts.reform.iahomeofficeintegrationapi.domain.entities.ccd.callback.Callback;
 import uk.gov.hmcts.reform.iahomeofficeintegrationapi.domain.entities.ccd.callback.PreSubmitCallbackResponse;
 import uk.gov.hmcts.reform.iahomeofficeintegrationapi.domain.entities.ccd.callback.PreSubmitCallbackStage;
-import uk.gov.hmcts.reform.iahomeofficeintegrationapi.domain.service.FeatureToggler;
 import uk.gov.hmcts.reform.iahomeofficeintegrationapi.domain.service.HomeOfficeSearchService;
 import uk.gov.hmcts.reform.iahomeofficeintegrationapi.infrastructure.client.HomeOfficeResponseException;
 
@@ -70,31 +69,42 @@ import uk.gov.hmcts.reform.iahomeofficeintegrationapi.infrastructure.client.Home
 @SuppressWarnings("unchecked")
 public class SubmitAppealApplicantSearchHandlerTest {
 
-    private static final String HOME_OFFICE_CALL_ERROR_MESSAGE = "### There is a problem\n\n"
-        + "The service has been unable t"
-        + "o retrieve the Home Office information about this appeal.\n\n"
-        + "[Request the Home Office information](/case/IA/Asylum/${[CASE_REFERENCE]}/trigger/requestHomeOfficeData) to"
-        + " try again. This may take a few minutes.";
+    private static final String HOME_OFFICE_CALL_ERROR_MESSAGE = """
+        ### There is a problem
+        
+        The service has been unable t\
+        o retrieve the Home Office information about this appeal.
+        
+        [Request the Home Office information](/case/IA/Asylum/${[CASE_REFERENCE]}/trigger/requestHomeOfficeData) to\
+         try again. This may take a few minutes.""";
 
-    private static final String HOME_OFFICE_INVALID_REFERENCE_ERROR_MESSAGE = "### There is a problem\n\n"
-        + "The appellant entered the "
-        + "Home Office reference number incorrectly. You can contact the appellant to check the reference number"
-        + " if you need this information to validate the appeal";
+    private static final String HOME_OFFICE_INVALID_REFERENCE_ERROR_MESSAGE = """
+        ### There is a problem
+        
+        The appellant entered the \
+        Home Office reference number incorrectly. You can contact the appellant to check the reference number\
+         if you need this information to validate the appeal""";
 
-    private static final String HOME_OFFICE_REFERENCE_NOT_FOUND_ERROR_MESSAGE = "### There is a problem\n\n"
-        + "The appellant’s Home Office reference"
-        + " number could not be found. You can contact the Home Office to check the reference"
-        + " if you need this information to validate the appeal";
+    private static final String HOME_OFFICE_REFERENCE_NOT_FOUND_ERROR_MESSAGE = """
+        ### There is a problem
+        
+        The appellant’s Home Office reference\
+         number could not be found. You can contact the Home Office to check the reference\
+         if you need this information to validate the appeal""";
 
-    private static final String HOME_OFFICE_APPELLANT_NOT_FOUND_ERROR_MESSAGE = "### There is a problem\n\n"
-        + "The service has been unable to retrieve the Home Office information about this appeal "
-        + "because the Home Office reference number does not have any matching appellant data in the system. "
-        + "You can contact the Home Office if you need more information to validate the appeal.";
+    private static final String HOME_OFFICE_APPELLANT_NOT_FOUND_ERROR_MESSAGE = """
+        ### There is a problem
+        
+        The service has been unable to retrieve the Home Office information about this appeal \
+        because the Home Office reference number does not have any matching appellant data in the system. \
+        You can contact the Home Office if you need more information to validate the appeal.""";
 
-    private static final String HOME_OFFICE_WRONG_APPLICANT_NOT_FOUND_ERROR_MESSAGE = "**Note:** "
-            + "The service has been unable to retrieve the Home Office information about this appeal "
-            + "because the Home Office Reference/Case ID, data of birth or name submitted by the appellant do not "
-            + "match the details stored by the Home Office\n## Do this next"
+    private static final String HOME_OFFICE_WRONG_APPLICANT_NOT_FOUND_ERROR_MESSAGE = """
+            **Note:** \
+            The service has been unable to retrieve the Home Office information about this appeal \
+            because the Home Office Reference/Case ID, data of birth or name submitted by the appellant do not \
+            match the details stored by the Home Office
+            ## Do this next"""
             + "\r\n- Contact the Home Office to get the correct details"
             + "\r\n- Use [Edit appeal](/case/IA/Asylum/${[CASE_REFERENCE]}/trigger/editAppealAfterSubmit) to update "
             + "the details as required"
@@ -111,8 +121,6 @@ public class SubmitAppealApplicantSearchHandlerTest {
     private static HomeOfficeSearchResponse homeOfficeNullFieldResponse;
     private static HomeOfficeSearchResponse homeOfficeMultipleApplicantsResponse;
     private final String someHomeOfficeReference = "some-reference";
-    @Mock
-    private FeatureToggler featureToggler;
     @Mock
     private Callback<AsylumCase> callback;
     @Mock
@@ -145,7 +153,7 @@ public class SubmitAppealApplicantSearchHandlerTest {
     void setUp() {
         submitAppealApplicantSearchHandler =
                 new SubmitAppealApplicantSearchHandler(
-                        homeOfficeSearchService, homeOfficeDataErrorsHelper, homeOfficeDataMatchHelper, featureToggler);
+                        homeOfficeSearchService, homeOfficeDataErrorsHelper, homeOfficeDataMatchHelper);
     }
 
     @ParameterizedTest
@@ -155,7 +163,6 @@ public class SubmitAppealApplicantSearchHandlerTest {
 
         final String jsonStr = new ObjectMapper().writeValueAsString(getSampleResponse());
 
-        when(featureToggler.getValue("home-office-uan-feature", false)).thenReturn(true);
         when(callback.getEvent()).thenReturn(SUBMIT_APPEAL);
         when(callback.getCaseDetails()).thenReturn(caseDetails);
         when(caseDetails.getId()).thenReturn(caseId);
@@ -186,7 +193,6 @@ public class SubmitAppealApplicantSearchHandlerTest {
     @Test
     void check_handler_returns_case_data_with_errors_data() throws Exception {
 
-        when(featureToggler.getValue("home-office-uan-feature", false)).thenReturn(true);
         when(callback.getEvent()).thenReturn(SUBMIT_APPEAL);
         when(callback.getCaseDetails()).thenReturn(caseDetails);
         when(caseDetails.getId()).thenReturn(caseId);
@@ -217,7 +223,6 @@ public class SubmitAppealApplicantSearchHandlerTest {
 
         String jsonStr = new ObjectMapper().writeValueAsString(getMultipleApplicantsResponse());
 
-        when(featureToggler.getValue("home-office-uan-feature", false)).thenReturn(true);
         when(callback.getEvent()).thenReturn(SUBMIT_APPEAL);
         when(callback.getCaseDetails()).thenReturn(caseDetails);
         when(caseDetails.getId()).thenReturn(caseId);
@@ -250,7 +255,6 @@ public class SubmitAppealApplicantSearchHandlerTest {
 
         String jsonStr = new ObjectMapper().writeValueAsString(getMultipleApplicantsResponse());
 
-        when(featureToggler.getValue("home-office-uan-feature", false)).thenReturn(true);
         when(callback.getEvent()).thenReturn(SUBMIT_APPEAL);
         when(callback.getCaseDetails()).thenReturn(caseDetails);
         when(caseDetails.getId()).thenReturn(caseId);
@@ -284,7 +288,6 @@ public class SubmitAppealApplicantSearchHandlerTest {
 
         String jsonStr = new ObjectMapper().writeValueAsString(getMultipleApplicantsResponse());
 
-        when(featureToggler.getValue("home-office-uan-feature", false)).thenReturn(true);
         when(callback.getEvent()).thenReturn(SUBMIT_APPEAL);
         when(callback.getCaseDetails()).thenReturn(caseDetails);
         when(caseDetails.getId()).thenReturn(caseId);
@@ -337,7 +340,6 @@ public class SubmitAppealApplicantSearchHandlerTest {
     @Test
     void check_handler_returns_case_data_with_error_status_for_null_fields() throws Exception {
 
-        when(featureToggler.getValue("home-office-uan-feature", false)).thenReturn(true);
         when(callback.getEvent()).thenReturn(SUBMIT_APPEAL);
         when(callback.getCaseDetails()).thenReturn(caseDetails);
         when(caseDetails.getId()).thenReturn(caseId);
@@ -366,7 +368,6 @@ public class SubmitAppealApplicantSearchHandlerTest {
     @Test
     void handle_should_return_error_for_invalid_home_office_reference() {
 
-        when(featureToggler.getValue("home-office-uan-feature", false)).thenReturn(true);
         when(callback.getEvent()).thenReturn(PAY_AND_SUBMIT_APPEAL);
         when(callback.getCaseDetails()).thenReturn(caseDetails);
         when(caseDetails.getId()).thenReturn(caseId);
@@ -394,7 +395,6 @@ public class SubmitAppealApplicantSearchHandlerTest {
     @Test
     void check_handler_validates_person_null_value_from_home_office_data() throws Exception {
 
-        when(featureToggler.getValue("home-office-uan-feature", false)).thenReturn(true);
         when(callback.getEvent()).thenReturn(PAY_AND_SUBMIT_APPEAL);
         when(callback.getCaseDetails()).thenReturn(caseDetails);
         when(caseDetails.getId()).thenReturn(caseId);
@@ -418,7 +418,6 @@ public class SubmitAppealApplicantSearchHandlerTest {
     @Test
     void check_handler_validates_error_detail_from_home_office_data_returns_fail() throws Exception {
 
-        when(featureToggler.getValue("home-office-uan-feature", false)).thenReturn(true);
         when(callback.getEvent()).thenReturn(MARK_APPEAL_PAID);
         when(callback.getCaseDetails()).thenReturn(caseDetails);
         when(caseDetails.getId()).thenReturn(caseId);
@@ -452,7 +451,6 @@ public class SubmitAppealApplicantSearchHandlerTest {
     @Test
     void check_handler_validates_no_appellant_error_from_home_office_data_returns_fail() throws Exception {
 
-        when(featureToggler.getValue("home-office-uan-feature", false)).thenReturn(true);
         when(callback.getEvent()).thenReturn(SUBMIT_APPEAL);
         when(callback.getCaseDetails()).thenReturn(caseDetails);
         when(caseDetails.getId()).thenReturn(caseId);
@@ -486,7 +484,6 @@ public class SubmitAppealApplicantSearchHandlerTest {
     @Test
     void check_handler_validates_ho_not_found_from_home_office_data_returns_fail() throws Exception {
 
-        when(featureToggler.getValue("home-office-uan-feature", false)).thenReturn(true);
         when(callback.getEvent()).thenReturn(Event.SUBMIT_APPEAL);
         when(callback.getCaseDetails()).thenReturn(caseDetails);
         when(caseDetails.getId()).thenReturn(caseId);
@@ -520,7 +517,6 @@ public class SubmitAppealApplicantSearchHandlerTest {
     @Test
     void check_handler_validates_main_applicant_not_found_from_home_office_data_returns_fail() throws Exception {
 
-        when(featureToggler.getValue("home-office-uan-feature", false)).thenReturn(true);
         when(callback.getEvent()).thenReturn(Event.SUBMIT_APPEAL);
         when(callback.getCaseDetails()).thenReturn(caseDetails);
         when(caseDetails.getId()).thenReturn(caseId);
@@ -546,7 +542,6 @@ public class SubmitAppealApplicantSearchHandlerTest {
     @Test
     void handle_should_return_failure_for_null_ho_response() throws Exception {
 
-        when(featureToggler.getValue("home-office-uan-feature", false)).thenReturn(true);
         when(callback.getEvent()).thenReturn(Event.SUBMIT_APPEAL);
         when(callback.getCaseDetails()).thenReturn(caseDetails);
         when(caseDetails.getId()).thenReturn(caseId);
@@ -590,7 +585,6 @@ public class SubmitAppealApplicantSearchHandlerTest {
     @Test
     void it_can_handle_callback_uan_feature_on() {
 
-        when(featureToggler.getValue("home-office-uan-feature", false)).thenReturn(true);
         for (Event event : Event.values()) {
 
             when(callback.getCaseDetails()).thenReturn(caseDetails);
@@ -639,7 +633,6 @@ public class SubmitAppealApplicantSearchHandlerTest {
     @Test
     void should_not_allow_empty_home_office_reference() {
 
-        when(featureToggler.getValue("home-office-uan-feature", false)).thenReturn(true);
         when(callback.getEvent()).thenReturn(SUBMIT_APPEAL);
         when(callback.getCaseDetails()).thenReturn(caseDetails);
         when(caseDetails.getId()).thenReturn(caseId);
@@ -683,7 +676,7 @@ public class SubmitAppealApplicantSearchHandlerTest {
             "1970-01-21"
         );
 
-        Person person = searchStatus.get(0).getPerson();
+        Person person = searchStatus.getFirst().getPerson();
 
         assertNotNull(searchStatus);
         assertTrue(!searchStatus.isEmpty());
@@ -723,7 +716,7 @@ public class SubmitAppealApplicantSearchHandlerTest {
         Person appellant = Person.PersonBuilder.person().withFamilyName("Fenn").withGivenName("Stephen").build();
 
         List<HomeOfficeCaseStatus> invalidList = new ArrayList<>();
-        invalidList.add(getSampleResponse().getStatus().get(0));
+        invalidList.add(getSampleResponse().getStatus().getFirst());
         List<HomeOfficeCaseStatus> searchStatus =
             submitAppealApplicantSearchHandler.selectMainApplicant(
                 caseId,
@@ -799,7 +792,7 @@ public class SubmitAppealApplicantSearchHandlerTest {
     void metadata_returned_empty_from_invalid_set_of_values() throws Exception {
         Optional<HomeOfficeMetadata> metadata = submitAppealApplicantSearchHandler.selectMetadata(
             caseId,
-            getSampleResponse().getStatus().get(0).getApplicationStatus().getHomeOfficeMetadata()
+            getSampleResponse().getStatus().getFirst().getApplicationStatus().getHomeOfficeMetadata()
         );
 
         assertNotNull(metadata);
